{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 157,
  "lineage": "ec4dcd86-718a-2965-abc4-4825c767d280",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "ingress-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:561580620525:loadbalancer/net/k8s-ingressn-nginxing-69f9023ccb/6e78e0931e50ad24",
            "arn_suffix": "net/k8s-ingressn-nginxing-69f9023ccb/6e78e0931e50ad24",
            "connection_logs": [
              {
              }
            ],
            "dns_name": "k8s-ingressn-nginxing-69f9023ccb-6e78e0931e50ad24.elb.ap-southeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:561580620525:loadbalancer/net/k8s-ingressn-nginxing-69f9023ccb/6e78e0931e50ad24",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "k8s-ingressn-nginxing-69f9023ccb",
            "security_groups": [
              "sg-08cb348e3900d0f88",
              "sg-0bcb8fbe61268dd4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03264cab6eaf114ba"
              },
              {
                "subnet_id": "subnet-0bcf27f0649574363"
              },
              {
                "subnet_id": "subnet-0d53faddab34e396e"
              }
            ],
            "subnets": [
              "subnet-03264cab6eaf114ba",
              "subnet-0bcf27f0649574363",
              "subnet-0d53faddab34e396e"
            ],
            "tags": {
              "elbv2.k8s.aws/cluster": "algorims-eks-cluster",
              "service.k8s.aws/resource": "LoadBalancer",
              "service.k8s.aws/stack": "ingress-nginx/nginx-ingress-controller"
            },
            "vpc_id": "vpc-07a5f894250e10e99",
            "zone_id": "ZCT6FZBF4DROD"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "kubernetes_service",
      "name": "ingress-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/nginx-ingress-controller",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "nginx-ingress-controller",
                  "meta.helm.sh/release-namespace": "ingress-nginx",
                  "service.beta.kubernetes.io/aws-load-balancer-name": "ingresscontrolersvc",
                  "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": "ip",
                  "service.beta.kubernetes.io/aws-load-balancer-scheme": "internet-facing",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "external"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "nginx-ingress-controller",
                  "app.kubernetes.io/version": "1.10.0",
                  "helm.sh/chart": "nginx-ingress-controller-11.0.0"
                },
                "name": "nginx-ingress-controller",
                "namespace": "ingress-nginx",
                "resource_version": "1402",
                "uid": "3ce9d8a6-6e4d-4a12-9bed-8724c17680ce"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.97.129",
                "cluster_ips": [
                  "10.100.97.129"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "load_balancer_class": "service.k8s.aws/nlb",
                "port": [
                  {
                    "name": "http",
                    "node_port": 32505,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "name": "https",
                    "node_port": 30645,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "https"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/name": "nginx-ingress-controller"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-ingressn-nginxing-69f9023ccb-6e78e0931e50ad24.elb.ap-southeast-2.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:561580620525:subnet/subnet-0d53faddab34e396e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d53faddab34e396e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561580620525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/algorims-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/algorims-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07a5f894250e10e99"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:561580620525:subnet/subnet-03264cab6eaf114ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-03264cab6eaf114ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561580620525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/algorims-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/algorims-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07a5f894250e10e99"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:561580620525:subnet/subnet-0bcf27f0649574363",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0bcf27f0649574363",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "561580620525",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/algorims-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/cluster/algorims-eks-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07a5f894250e10e99"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:561580620525:vpc/vpc-07a5f894250e10e99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0a230e533617a6532",
            "default_route_table_id": "rtb-05edda52f9f7c5f6a",
            "default_security_group_id": "sg-0c1000fbb67b3d9d0",
            "dhcp_options_id": "dopt-0408b7c30ffef0199",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-07a5f894250e10e99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05edda52f9f7c5f6a",
            "owner_id": "561580620525"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "algorims-dev-sg-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:561580620525:security-group/sg-0d4f45ab278c817ff",
            "description": "eks cluster sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4f45ab278c817ff",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06d3ad54d1e3ada2d"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "algorims-dev-master",
            "name_prefix": "",
            "owner_id": "561580620525",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "ownedBy": "algorims",
              "terraform": "true"
            },
            "tags_all": {
              "env": "dev",
              "ownedBy": "algorims",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a5f894250e10e99"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "algorims-dev-sg-nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:561580620525:security-group/sg-06d3ad54d1e3ada2d",
            "description": "sg for nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d3ad54d1e3ada2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d4f45ab278c817ff"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "algorims-sg-nodes",
            "name_prefix": "",
            "owner_id": "561580620525",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "ownedBy": "algorims",
              "terraform": "true"
            },
            "tags_all": {
              "env": "dev",
              "ownedBy": "algorims",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a5f894250e10e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default-vpc",
            "aws_security_group.algorims-dev-sg-master"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-3670694524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d4f45ab278c817ff",
            "security_group_rule_id": "sgr-0b8ffc628f800958d",
            "self": false,
            "source_security_group_id": "sg-06d3ad54d1e3ada2d",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default-vpc",
            "aws_security_group.algorims-dev-sg-master",
            "aws_security_group.algorims-dev-sg-nodes"
          ]
        }
      ]
    }
  ]
}